# OSBMonitor

./: .gitignore  CMakeLists.txt  README.md  _service  de.agundur.osbmonitor.plasmoid  osbmonitor.spec
.github/workflows/: deb.yml  obs-submit.yml
debian/: changelog  control  rules
package/: metadata.json
package/contents/config/: main.xml
package/contents/ui/: CompactRepresentation.qml  FullRepresentation.qml  main.qml
package/contents/ui/code/: osbFetcher.js
package/contents/ui/config/: ConfigMisc.qml
packaging/: OSBMonitor.spec  osbmonitor.spec
